# dispatcher-app

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  MANIFEST.in  Makefile  README.md  conda_spec_test.txt  configuration.md  image_rgba.html  instructions.txt  interfaces.md  oda-ontology.owl  oda-ontology.ttl  plugin-interface.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-plugins.txt  requirements.txt  setup.py  tmp_response_content.txt
.github/styles/: vocab.txt
.github/workflows/: bumpversion.yaml  codeql.yml  enforce-labels.yml  prose.yml  python-app.yml  python-container-integration.yml  python-oda-api.yml  python-plugins.yml  python-tap-app.yml  tag.yaml
cdci_data_analysis/: __init__.py  app_logging.py  configurer.py  pytest_fixtures.py  timer.py  web_display.py
cdci_data_analysis/analysis/: catalog.py  drupal_helper.py  email_helper.py  exceptions.py  hash.py  instrument.py  io_helper.py  ivoa_helper.py  job_manager.py  json.py  matrix_helper.py  ontology.py  parameters.py  plot_tools.py  products.py  queries.py  renku_helper.py  time_helper.py  tokenHelper.py
cdci_data_analysis/config_dir/: conf_env.yml  conf_env.yml.example  gunicorn.conf  phosphoros_filters.json
cdci_data_analysis/ddosa_interface/: osa_catalog.py  osa_dispatcher.py  osa_image_dispatcher.py  osa_isgri.py  osa_jemx.py  osa_lightcurve_dispatcher.py  osa_spectrum_dispatcher.py
cdci_data_analysis/flask_app/: #app.py#  app.py  diaptcher_tools.py  dispatcher_query.py  exceptions.py  logstash.py  micro_app.py  mock_data_server.py  mock_worker.py  schemas.py  sentry.py  tasks.py  test_app.py
cdci_data_analysis/flask_app/static/: style.css
cdci_data_analysis/flask_app/static/js/: addInput.js
cdci_data_analysis/flask_app/templates/: _formhelpers.html  analysis_display_app.html  body_article_product_gallery.py  bokeh_embed.html  email.html  incident_report_email.html  incident_report_matrix_message.html  matrix_message.html  matrix_message.text  submitted.html
cdci_data_analysis/old_stuff/: analysis.py  forms.py  web_display.py
cdci_data_analysis/plugins/: __init__.py  importer.py
cdci_data_analysis/plugins/ddosa/: osa_catalog.py  osa_dispatcher.py  osa_image_dispatcher.py  osa_isgri.py  osa_jemx.py  osa_lightcurve_dispatcher.py  osa_spectrum_dispatcher.py
cdci_data_analysis/plugins/dummy_instrument/: __init__.py  data_server_conf.yml  data_server_dispatcher.py  empty_async_instrument.py  empty_instrument.py  empty_semi_async_instrument.py  image_query.py  instr_catalog.py  my_instrument.py
cdci_data_analysis/plugins/dummy_plugin/: __init__.py  data_server_dispatcher.py  dummy_plugin_conf.yml  empty_async_instrument.py  empty_async_return_progress_instrument.py  empty_development_instrument.py  empty_instrument.py  empty_instrument_with_conf.py  empty_instrument_with_posix_path.py  exposer.py  image_query.py  instr_catalog.py  my_instrument.py
integration_test/: integration_test.py
tests/: .test_server_basic.py.swp  conftest.py  oda-ontology.ttl  sitecustomize.py  test-conf.yaml  test_catalog_class.py  test_configurer.py  test_job_management.py  test_local.py  test_matrix_messages.py  test_ontology.py  test_parameters.py  test_plugins.py  test_schemas.py  test_server_basic.py  test_server_plugin_integral_all_sky.py  test_tap.py  test_unit.py
tests/gallery_pg_db_data/: pg_gallery_db_init_data_products.sql  pg_gallery_db_init_dump.sql  pg_gallery_db_init_views_dump.sql
tests/observation_yaml_dummy_files/: obs_rev_2542.yaml
tests/reference_emails/: api_code_attachment_submitted  done-failing.html  incident_report.html  submitted-dummy.html  submitted-no-api-code.html  submitted-numeric-not-very-long-dummy.html  submitted-numeric-not-very-long-no-api-code.html  submitted-numeric-not-very-long-numerical.html  submitted-numeric-not-very-long.html  submitted-numeric-very-long-not-permanent.html  submitted-numerical.html  submitted.html
tests/reference_matrix_messages/: done.html  failed.html  incident_report.html  submitted-dummy.html
