[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'

[project]
name = "cdci_data_analysis"
dynamic = ["version"]
description = "A Python Framework for CDCI online data analysis"
authors = [
    {name = "Andrea Tramacere", email = "contact@odahub.io"},
    {name = "Volodymyr Savchenko", email = "contact@odahub.io"}
]
maintainers = [
  {name = "Gabriele Barni", email = "contact@odahub.io"},
  {name = "Denys Savchenko", email = "contact@odahub.io"}
]
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "oda-api>=1.3.0",
    "numpy",
    "pyyaml",
    "flask==2.0.3",
    "astropy>=6.1",
    "gunicorn",
    "decorator",
    "python-logstash",
    "pylogstash-context",
    "blinker",
    "bokeh>3.0,<3.2",
    "json_tricks",
    "flask-restx==1.2.0",
    "werkzeug==2.0.3",
    "logging_tree",
    "pyjwt",
    "marshmallow<3.24",
    "black>=22.10.0",
    "bs4",
    "sentry-sdk",
    "raven",
    "validators==0.28.3",
    "jsonschema<=4.17.3",
]

[project.optional-dependencies]
ontology = [
    "rdflib>=6.2.0",
]
async = [
    "celery",
]
ivoa = [
    "queryparser-python3>=0.6.1",
    "psycopg2-binary"
]
renku = [
    "GitPython",
    "nbformat",
    "giturlparse",
]

[project.scripts]
run_osa_cdci_server = "bin.run_osa_cdci_server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
cdci_data_analysis = ["config_dir/*", "plugins/dummy_plugin/*yml"]

[tool.setuptools.dynamic]
version = {attr = "cdci_data_analysis.__version__"}

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-depends>=1.0.1",
    "pytest-postgresql>=7.0.2",
    "pytest-sentry>=0.3.3",
    "pytest-xdist>=3.8.0",
]
plugin-integral = [
    {include-group = "dev"},
    "cdci-osa-plugin",
    # dependencies that are currently not in package definition, only in requirements (to be moved)
    "ddaclient",
    "oda-knowledge-base[rdf,cwl]",
    "astroquery-integral", # not needed apart from test
    "astropy",
    "simple_logger",
    "numpy"
]
plugin-integral-all-sky = [
    {include-group = "dev"},
    "dispatcher-plugin-integral-all-sky",
]
plugin-nb2workflow = [
    {include-group = "dev"},
    "dispatcher-plugin-nb2workflow",
    "nb2workflow[service,rdf] >= 1.3.114",
    "pytest-httpserver>=1.1.3",
    "pytest-xprocess>=1.0.2",
]
plugins = [
    {include-group = "plugin-integral"},
    {include-group = "plugin-integral-all-sky"},
    {include-group = "plugin-nb2workflow"}
]

[tool.uv.sources]
oda-api = { git = "https://github.com/oda-hub/oda_api.git", branch="numpy-gt-2" }
dispatcher-plugin-nb2workflow = { git = "https://github.com/oda-hub/dispatcher-plugin-nb2workflow" }
cdci-osa-plugin = { git = "https://github.com/oda-hub/dispatcher-plugin-integral" }
dispatcher-plugin-integral-all-sky = { git = "https://github.com/oda-hub/dispatcher-plugin-integral-all-sky" }
